fixed minor UI alignment

--- a/public/style.css
+++ b/public/style.css
@@ -1,49 +1,5 @@
 
 
-/* html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-} */
-
 html {
 	font-size: 62.5%;
 }
@@ -126,12 +82,17 @@ table {
 	font-size: 2rem;
 }
 
-th, span.filterbtn {
+th {
 	text-align: center;
 	background-color: #0F1111;
 	position: sticky;
 	top: 0;
 	font-size: 2rem;
+	padding: 1rem;
+}
+
+.checkmark-header {
+	width:10%
 }
 
 div.table {
@@ -139,6 +100,11 @@ div.table {
 	width: 70%;
 	justify-content: center;
 	
+}
+
+td.checkbox {
+	height: 100%;
+	text-align: center;
 }
 
 
